= 0.0.9
=== 7th June, 2009
* Made home configurable, you can decide to show header, footer, users, projects, entries in home, and avatars and summaries on entries
* Removed tips

= 0.0.8
=== 6th June, 2009
* Made planetoid more flexible by not pretending it will be used for a developers community, by:
* Removing tips for creating project
* Not showing twitter / github links if empty
* Refactoring and adding tests for twitter_url and github_url

= 0.0.7
=== 6th June, 2009
* Added google analytics support
* Cache for javascript and css

= 0.0.6
=== 5th June, 2009
* DRYed up and simplified views
* Removed show actions on entries and feeds
* Removed destroy action on entries
* Show projects and posts by user

= 0.0.4
=== 5th June, 2009
* Twitter and Github users instead of URLs (by @nickel83) 

= 0.0.4
=== 29th May, 2009
* Project management: you can store name, description, url and associate it to many users

= 0.0.3
=== 28th May, 2009
* New sessions controller for login / logout with a form instead of http authentication
* Integrated admin actions into public layout, restricted actions and hidden links for non-admins

= 0.0.2
=== 22nd May, 2009
* Moved basic config to a config file, to be able to customize admin login and password, site title, meta description, meta keywords, header and footer

= 0.0.1
=== 21st May, 2009
* Initial published version.