@@ -4,12 +4,14 @@ class User < ActiveRecord::Base
   
   has_and_belongs_to_many :projects, :order => 'projects.name'
   
-  validates_presence_of :name, :email
-  validates_uniqueness_of :email
-  validates_uniqueness_of :blog_url, :twitter_user, :github_user, :allow_blank => true
-  validates_format_of :email, :with => REXP_EMAIL
+  validates_presence_of :name
+
+  validates_format_of :email, :with => REXP_EMAIL, :allow_blank => true
   validates_format_of :blog_url, :with => REXP_URL, :allow_blank => true
   validates_format_of :twitter_user, :github_user, :with => REXP_USER, :allow_blank => true
+  
+  validates_uniqueness_of :email, :allow_blank => true
+  validates_uniqueness_of :blog_url, :twitter_user, :github_user, :allow_blank => true  
   
   # Returns the full github URL for this user if has a github user, or nil if not
   def github_url
