@@ -2,6 +2,7 @@
 === 7th June, 2009
 * Made home configurable, you can decide to show header, footer, users, projects, entries in home, and avatars and summaries on entries
 * Removed tips
+* User email is no longer mandatory
 
 = 0.0.8
 === 6th June, 2009
